name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Carlos Morera de la Chica
maintainer:          carlosdelachica@gmail.com
category:            Gam
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
