name:                   Addition
version:                0.1.0.0
license-file:           LICENSE
author:                 Carlos
maintainer:             yo@haskell.com
category:               Text
build-type:             Simple
cabal-version:          >=1.10

library
  exposed-modules:      Addition
  ghc-options:          -Wall -fwarn-tabs
  build-depends:        base >= 4.7 && <5
                      , hspec
  hs-source-dirs:       .
  default-language:     Haskell2010
