name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Carlos Morera de la Chica
maintainer:          carlosdelachica@gmail.com
category:            Gam
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  default-language:    Haskell2010

executable hangman
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , hangman
  default-language:    Haskell2010

test-suite hangman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hangman
                     , QuickCheck
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
