name:                wordnumber
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wordnumber#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WordNumber
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable wordnumber-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wordnumber
  default-language:    Haskell2010

test-suite wordnumber-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             WordNumberTest.hs
  build-depends:       base
                     , wordnumber
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wordnumber
